# team-planner

./: README.md  launch.sh  package-lock.json  test.py
core/: Cargo.toml  build.sh  run.sh
core/src/: main.rs
core/src/console/: api.rs  mod.rs
core/src/lib/: data.rs  mod.rs  sat.rs
core/src/lib/gui/: get_data.rs  mod.rs  search_champions.rs  search_teams.rs  team.rs  types.rs
core/src/lib/sat/: boolean_expression.rs  build_champion_constraints.rs  build_subgraph_constraints.rs  champion_graph.rs  cnf.rs  cnf_builder.rs  helpers.rs  mod.rs  solve.rs  utils.rs
gui/: .gitignore  .prettierrc  components.json  package-lock.json  package.json  tailwind.config.ts  todo
gui/src/: app.css  app.html  index.html
gui/src/lib/: constants.ts  tft_core.d.ts  types.ts
gui/src/lib/app/: result-list.svelte
gui/src/lib/app/dialog/: cost-input-group.svelte  cost-input.svelte  damage-type-input.svelte  dialog.svelte  slot-type-input.svelte
gui/src/lib/app/filter-dialog/: cost-input-group.svelte  cost-input.svelte  damage-type-input.svelte  filter-dialog-form.svelte  filter-dialog.svelte  range-input.svelte  slot-tabs.svelte  slot-type-input.svelte  trait-checkbox.svelte  trait-input.svelte
gui/src/lib/app/form-context/: context.ts  defaults.ts  form-control-array.ts  (+6 more)
gui/src/lib/assets/: tft-champion.json  tfttraits.json
gui/src/lib/components/: champion-checkbox.svelte  champion-portrait.svelte  checkbox-icon.svelte  conditional-tooltip.svelte  loader.svelte  spell-tooltip.svelte  trait-checkbox.svelte  trait-icon.svelte  trait-tooltip.svelte
gui/src/lib/icons/: alert-icon.svelte  checkmark-icon.svelte  cog-icon.svelte  gold-icon.svelte  info-icon.svelte  pencil-icon.svelte  plus-icon.svelte  range-icon.svelte  user-group-icon.svelte  user-icon.svelte  x-icon.svelte  x-solid-icon.svelte
gui/src/lib/utils/: misc.ts  tailwind.ts  tooltips.ts
gui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
gui/static/: worker.js
scripts/: download_all_json.py  download_champions.py  download_misc_icons.py  download_traits.py  enhance_sprites.py  extract_sprites.py  finalize_icons.py  requirements.txt  utils.py
scripts/lib/: build_spell_html.py  build_tooltip_html.py  build_trait_html.py  compute_spell_variables.py  constants.py  interpolate_ability.py  interpolate_ability_utils.py  utils.py
(+62 files in other folders)
