[package]
name = "tft-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.92"

[build-dependencies]
wasm-bindgen-cli = "0.2.92"
wasm-server-runner = "0.6.3"

# @fixme: Setting default runner doesn't work for some reason, need to use env vars
#   CARGO_TARGET_WASM32_UNKNOWN_UNKNOWN_RUNNER=wasm-server-runner cargo run --target wasm32-unknown-unknown
# [target.wasm32-unknown-unknown]
# runner = "wasm-server-runner"
