[package]
name = "tft-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
logicng = "0.1.0-alpha.3"
serde = "1.0.199"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.92"
web-time = "1.1.0"

[build-dependencies]
wasm-pack = "0.12.1"
wasm-server-runner = "0.6.3"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

# @fixme: Setting default runner doesn't work for some reason, need to use env vars
#   CARGO_TARGET_WASM32_UNKNOWN_UNKNOWN_RUNNER=wasm-server-runner cargo run --target wasm32-unknown-unknown
# [target.wasm32-unknown-unknown]
# runner = "wasm-server-runner"
